--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Utility library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "jest"
   },
   "author": "Tatsuto Iijima",
   "license": "Apache-2.0",
   "dependencies": {
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2"
   }
 }
